--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
 
     <main class="btn-grid" role="main">
         <!-- LINK TO YOUR FORM: uubrGufSwKSt1sn88 -->
-        <button class="btn upload" onclick="window.open('https://forms.gle/uubrGufSwKSt1sn88', '_blank')" aria-label="Upload Evidence">
+         <button class="btn upload" onclick="generateToken(); window.open('https://forms.gle/uubrGufSwKSt1sn88','_blank')">
+aria-label="Upload Evidence">
             >>> UPLOAD EVIDENCE
         </button>
         
