--- a/index.html
+++ b/index.html
@@ -355,6 +355,26 @@ aria-label="Upload Evidence">
             }
         }
     </script>
+<div id="token-box" style="display:none; background:#000; border:2px dashed #00ff00; padding:15px; margin: 20px auto; max-width: 90%; color: #00ff00; text-align: center;">
+    <h3 style="margin:0;">EVIDENCE SECURED</h3>
+    <p>YOUR LEGAL TOKEN:</p>
+    <h2 id="token-id" style="color: #fff; background: #222; padding: 5px;">GENERATING...</h2>
+    <p style="font-size: 0.7rem; color: #aaa;">SAVE THIS TOKEN. Proof for the Vault.</p>
+</div>
+
+<script>
+function generateToken() {
+    const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
+    let token = 'VERITAS-' + Math.floor(Math.random() * 10000);
+    for(let i=0; i<4; i++) token += chars.charAt(Math.floor(Math.random() * chars.length));
+    document.getElementById('token-id').innerText = token;
+    document.getElementById('token-box').style.display = 'block';
+    
+    // Auto-scroll to the token so they see it
+    document.getElementById('token-box').scrollIntoView({behavior: "smooth"});
+}
+</script>
+
 </body>
 </html>
 
